<resources>
    <string name="app_name">Cusina</string>
    <string name="notification_channel_name">App Updates</string>
    <string name="notification_channel_description">This channel will give you updates about app.</string>
    <string name="internal_storage">Internal storage</string>
    <string name="storage_permission_required">You have denied storage permission. Storage permission is required to upload image. Try again.</string>
    <string name="storage_permission_deny">You cannot access or upload image without storage permission.</string>
    <string name="storage_permission_settings">You have permanently denied storage permission. You can grant them in app settings.</string>
    <string name="location_permission_settings">You have permanently denied location permission. You can grant them in app settings.</string>
    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="location_permission_required">You have denied location permission. Location permission is required for better experience. Try again.</string>
    <string name="location_permission_required_map">You have denied location permission. Location permission is required for Map. Try again.</string>
    <string name="location_permission_deny">You have denied location permission. Location permission is required for Map. Try again.</string>
    <string name="location_deny">You cannot access nearby dishes.</string>
    <string name="camera_permission_required">You have denied camera permission. Camera permission is required to upload image. Try again.</string>
    <string name="camera_permission_deny">You cannot access or upload image without camera permission.</string>
    <string name="camera_permission_settings">You have permanently denied camera permission. You can grant them in app settings.</string>
    <string name="net_not_connected">No network available!</string>
    <string name="ok">Ok</string>
    <string name="alert">Alert</string>
    <string name="no_internet_connection">Please enable data or wifi connection.</string>
    <string name="splash_message">See what\'s cooking at Lutong Bahay</string>
    <string name="Enter_mobile_hint">Enter Mobile Number</string>
    <string name="Enter_mobile">Enter your mobile number</string>
    <string name="next">Next</string>
    <string name="term_msg1">By continuing, you agree to the</string>
    <string name="term_msg2">of Lutong Bahay.</string>
    <string name="and">and</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="search_address">Search Address</string>
    <string name="current_location">Current Location</string>
    <string name="use_this_address">Use This Address</string>
    <string name="msg1">Available dishes are only within a 3km radius</string>
    <string name="msg2">from your address at the moment.</string>
    <string name="requiredmobile">Please enter a mobile number!</string>
    <string name="requiredname">Please enter a valid name !</string>
    <string name="requiredvaildmobile">Please enter a valid mobile number!</string>
    <string name="invalidmobile">Invaild Mobile Number</string>
    <string name="placeorder_msg1">Hungry Na? Just a few more steps</string>
    <string name="placeorder_msg2">Complete a few more details to confirm your order.</string>
    <string name="add_more_details">Add more details</string>
    <string name="cancel">Cancel</string>
    <string name="order_placed">Order Placed!</string>
    <string name="order_placed_msg1">Your order was successfully placed and is being prepared by the food server.</string>
    <string name="order_placed_msg2">prepared by the food server.</string>
    <string name="back_to_food_menu">Back to Food Menu</string>
    <string name="dish_listed">Dish Listed!</string>
    <string name="dish_listed_msg1">You dish was successfully listed and is being \n reviewed for approval by Lutong Bahay.</string>
    <string name="dish_listed_msg2">reviewed for approval by Lutong Bahay.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="add_another_luto">Add Another Luto</string>
    <string name="application_received">Application Received!</string>
    <string name="application_received_msg1">Thank you for your application to be a server in Lutong Bahay! \n \n You will be notified in (7) seven business days about the status of your application</string>
    <string name="application_received_msg2">Lutong Bahay!</string>
    <string name="application_received_msg3">You will be notified in (7) seven business days about</string>
    <string name="application_received_msg4">the status of your application</string>
    <string name="add_another_application">Submit Another Application</string>
    <string name="personal_info">Personal Information</string>
    <string name="username">Name</string>
    <string name="username_placeholder">Full name</string>
    <string name="usermobile">Mobile Number</string>
    <string name="useremail">Email</string>
    <string name="useremail_placeholder">Email Address</string>
    <string name="useraddress">Address</string>
    <string name="useraddress_line1">Address Line 1</string>
    <string name="useraddress_line2">Address Line 2</string>
    <string name="usercity">City</string>
    <string name="userzipcode">Zip Code</string>
    <string name="userzipcode_placeholder">XXXXXX</string>
    <string name="usercountry">Country</string>
    <string name="city_name">PHILIPPINES</string>
    <string name="userGender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="samplename">Kathleen Domingo</string>
    <string name="samplemobile">+63 9141567681 </string>
    <string name="sampleemail">Kathd@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="connect_facebook">CONNECT FACEBOOK</string>
    <string name="saved_places">Saved Places</string>
    <string name="rewards_and_points">Rewards and Points</string>
    <string name="settings">Settings</string>
    <string name="sell_food">Sell Food with Lutong Bahay</string>
    <string name="title_orders">Orders</string>
    <string name="title_earn_rewards">Earn Rewards</string>
    <string name="title_account">Account</string>
    <string name="myTray">My Tray</string>
    <string name="myDetails">My Details</string>
    <string name="title">Title</string>
    <string name="locationName">Location Name</string>
    <string name="searchHint">Search dishes or cuisines</string>
    <string name="title_home">Home</string>
    <string name="searchAddress">Search Address</string>
    <string name="title_search">Search</string>
    <string name="BagongLutoNearMe">Bagong Luto near me</string>
    <string name="nearMeTxtShort">Don\'t know what to eat? Here are freshly cooked dishes near you</string>
    <string name="seeMore">See More</string>
    <string name="PatokNaPagkain">Patok na Pagkain</string>
    <string name="PalutoDishes">Paluto Dishes</string>
    <string name="shortTxtShort">Looking for something special? Check out these dishes for pre-order.</string>
    <string name="nearMeDishesTxtShort">Dishes serving soon near you</string>
    <string name="IhahainSoonNearMe">Ihahain Soon</string>
    <string name="PancitMalabon">Pancit Malabon</string>
    <string name="byJennyPancit">by Jenny\'s Pancit</string>
    <string name="placeDesert">Desert</string>
    <string name="AvailableFridays">Available Fridays</string>
    <string name="Pick_up_Only">Pick-up Only</string>
    <string name="PHP_250_00">PHP 250.00</string>
    <string name="todo">todo</string>
    <string name="_productPreOrder">Pre-Order</string>
    <string name="address_detail">Address Detials</string>
    <string name="fav_dishes">Favorite Dishes</string>
    <string name="msg_and_notification">Message and Notifications</string>
    <string name="to_review">To Review</string>
    <string name="change_password">Change Password</string>
    <string name="save_details">Save Details</string>
    <string name="yourLocation">Your location</string>
    <string name="firstAddress">First Address</string>
    <string name="secondAddress">Second Address Jodhpur City</string>
    <string name="addOtherAddress">Add Building name / floor / unit number</string>
    <string name="orderSummery">Order Summary</string>
    <string name="total">Total</string>
    <string name="_70">70.00</string>
    <string name="_placeOrder">Place Order - 70.00</string>
    <string name="_photos">3 Photos</string>
    <string name="PorkAdobo">Pork Adobo</string>
    <string name="_productServingLeft">5 servings left</string>
    <string name="_productRating">4.0</string>
    <string name="_pHp">PHP \u0020</string>
    <string name="_15_min">15 mins</string>
    <string name="_deleveryFee">Delivery Fee: Php 50.00</string>
    <string name="_09KM">0.9 KM</string>
    <string name="MinimumOrder">Minimum Order: \u0020</string>
    <string name="_productMinimumOrderCount">2</string>
    <string name="_Serving">\u0020 Serving</string>
    <string name="_discription">Description</string>
    <string name="_discriptionTxt">Pork Adobo with RICE and soup of the day (Sinigang) Only 70 pesos!
        \n\n

        Perfect sa mga nagwowork around Ortigas, Pasig, and Kapitolyo.</string>
    <string name="_ServerInformation">Server Information</string>
    <string name="SeeProfile">See Profile</string>
    <string name="_ownerTxt">Reggie\\\'s Kitchen Owner: Regine Santos</string>
    <string name="_follow">Follow</string>
    <string name="_serverRating">Server Rating:</string>
    <string name="_ServingOrders">Serving Orders</string>
    <string name="_1">1</string>
    <string name="_AddToTray">Add to Tray - 70.00</string>
    <string name="_hungryTxt">Hungry Na? Just a few more steps</string>
    <string name="_hungryShortTxt">Complete a few more details to confirm your order.</string>
    <string name="_addMoreDetails">Add more details</string>
    <string name="_cancel">Cancel</string>
    <string name="_dishName">Noodles</string>
    <string name="_productName">Product</string>
    <string name="_ForDeliveryCheck">For Delivery</string>
    <string name="_ForPickUpCheck">For Pick Up</string>
    <string name="_subTotal">Subtotal (estimated)</string>
    <string name="_DeliveryFees">Delivery Fees</string>
    <string name="_notAvailable">NOT AVAILABLE</string>
    <string name="_4">40.00</string>
    <string name="_40">40</string>
    <string name="_productPrice">PHP 70.00</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Processing">Processing</string>
    <string name="Completed">Completed</string>
    <string name="Cancelled">Cancelled</string>
    <string name="MyOrders">My Orders</string>
    <string name="OrderNumber">Order Number: \u0020</string>
    <string name="_4151">4151</string>
    <string name="OrderDate">Order Date:</string>
    <string name="_OrderDateTxt">November 15, 2019</string>
    <string name="_ServerTxt">Reggie\'s Kitchen</string>
    <string name="Server">Server: \u0020</string>
    <string name="TransactionTxt">Transaction ID:</string>
    <string name="TransactionID">LT-151516141-11-19</string>
    <string name="TrayQntTxt">Tray Quantity:</string>
    <string name="TrayQuantity">3 Servings</string>
    <string name="orderCompletedDate">19-2-2020</string>
    <string name="_total">Total:</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="DELIVERED_Txt">DELIVERED</string>
    <string name="CANCELLED_Txt">CANCELLED</string>
    <string name="Serving">Servings</string>
    <string name="_3">3 \u0020</string>
    <string name="_viewOrder">View Order</string>
    <string name="dayName">DayName</string>
    <string name="monthName">April</string>
    <string name="dateTxt">21</string>
</resources>