<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/blank">
    <fragment
        android:id="@+id/blank"
        android:name="com.example.lutongbahay.Fragments.Blank"
        android:label="@string/title_home"
        tools:layout="@layout/blank" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lutongbahay.Fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.lutongbahay.Fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.lutongbahay.Fragments.ordersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_earn_rewards"
        android:name="com.example.lutongbahay.Fragments.Earn_Rewards_Fragment"
        android:label="@string/title_earn_rewards"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.lutongbahay.Fragments.Profile_Fragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_profile" />

</navigation>